# Embedded-Rust

./: README.md  titanclass_embassy-start.url
NUCLEO-F413ZH/01-helloworld/: Cargo.toml
NUCLEO-F413ZH/02-blink/: Cargo.toml
NUCLEO-F413ZH/03-button/: Cargo.toml  Embed.toml
NUCLEO-F413ZH/03-button/.cargo/: config.toml
NUCLEO-F413ZH/03-button/src/: main.rs
NUCLEO-F413ZH/04-time/: Cargo.toml
NUCLEO-F413ZH/04-time/src/: main.rs
NUCLEO-F413ZH/blink/: Embedded Rust setup explained.url
NUCLEO-F413ZH/blink/src/: main.rs
NUCLEO-F413ZH/helloworld/: Cargo.toml
PC/01-guessing-game/src/: main.rs
PC/03-data-types/src/: main.rs
PC/04-functions/src/: main.rs
PC/06-fahrenheit-to-celsius/src/: main.rs
PC/07-generate-n-fibonacci/src/: main.rs
PC/09-ownership/src/: main.rs
Projects/29-minigrep/src/: lib.rs  main.rs
Projects/IAED-23-24/: Cargo.toml  output.txt  test_01.txt
Projects/IAED-23-24/src/: commands.rs  console.rs  error.rs  lib.rs  (+4 more)
Projects/IAED-P1-20-21/: Cargo.toml
Projects/IAED-P2-20-21/: Cargo.toml
Projects/cli_todo_list/: Cargo.toml
Projects/iaed-p1-20-21-attemp-2/: Cargo.toml
Projects/linked_list/: Cargo.toml
Projects/multi-target-workspace/: Cargo.toml
Projects/nucleo-f413zh-music-playback-system/: Cargo.toml  arm.ioc
Projects/po-21-22/: Cargo.toml
Projects/weather_fetcher/: Cargo.toml
Projects/weather_fetcher/src/: lib.rs  main.rs  weather_data.rs
R&D/embedded-hal-driver-ultrasonic/: Cargo.toml
R&D/embedded-hal-driver-ultrasonic/driver-ultrasonic/: Cargo.toml
R&D/embedded-hal-driver-ultrasonic/driver-ultrasonic/src/: lib.rs
R&D/embedded-hal-driver-ultrasonic/examples/esp32-s3/: Cargo.toml
R&D/embedded-hal-driver-ultrasonic/examples/esp32-s3/src/: main.rs
R&D/embedded-hal-driver-ultrasonic/examples/nucleo-f413zh/: Cargo.toml
R&D/embedded-hal-driver-ultrasonic/examples/nucleo-f413zh/src/: main.rs
R&D/embedded-hal-driver-ultrasonic/src/: lib.rs
R&D/embedded-hal-driver-ultrasonic/src/lib/: lib.rs
TEMPLATES/esp32-s3-template/: Cargo.toml
TEMPLATES/nucleo-f413zh-template/: Cargo.toml
Tutorials ESP32/00-example/: Cargo.toml
Tutorials ESP32/00-example/src/: main.rs
Tutorials Embassy/: Blog - Embassy bootloader.url  Embassy Tutorials - Omar Hiari.url  Embedded Tutorials - DeepBlue.url  Embedded Tutorials.url  Platforms Maker.io powered by DigiKey.url  STM32F4 with Embedded Rust at the HAL - The Embedded Rustacean Blog.url
Tutorials Embassy/03-uart-pooling/: Cargo.toml
Tutorials Embassy/esp_example/: Cargo.toml
Tutorials Embassy/gpio_button_controlled_blinking/: Cargo.toml
Tutorials Embassy/nucleo-f413zh-adxl345/: Cargo.toml  uart-pooling.ioc
Tutorials Embassy/nucleo-f413zh-grove-buzzer-v1_2/: Cargo.toml  nucleo-f413zh-grove-buzzer-v1_2.ioc
Tutorials Embassy/nucleo-f413zh-grove-sound-sensor-v1_6/: COM3_2024_08_20.00.13.56.438.txt  COM3_2024_08_20.00.15.56.007.txt  Cargo.toml  plot.py
Tutorials Embassy/nucleo-f413zh-grove-ultrasonic-ranger-v2_0/: Cargo.toml  nucleo-f413zh-grove-ultrasonic-ranger-v2_0.ioc
Tutorials Embassy/nucleo-f413zh-logger/: Cargo.toml
Tutorials Embassy/nucleo-f413zh-logger/pc/: Cargo.toml
Tutorials Embassy/nucleo-f413zh-logger/pc/src/: defmt_parser.rs  gui.rs  main.rs
Tutorials Embassy/nucleo-f413zh-sdmmc/: Cargo.toml  nucleo-f413zh-sdmmc.ioc
Tutorials Embassy/nucleo-f413zh-uart-dma/: Cargo.toml  nucleo-f413zh-uart.ioc
Tutorials Embassy/nucleo-f413zh-uart-dma-buffered/: Cargo.toml
Tutorials Embassy/nucleo-f413zh-uart-dma-multithread/: Cargo.toml
Tutorials Embassy/uart-pooling/: Cargo.toml  uart-pooling.ioc
Tutorials PC Rust Book/07-generate-n-fibonacci/: Cargo.toml
Tutorials PC Rust Book/08-lyrics-twelve-days-of-christmas/: Cargo.toml  twelve-days-of-christmas-lyrics.txt
Tutorials PC Rust Book/12-def-init-structs/: Cargo.toml
Tutorials PC Rust Book/15-def-enum/: Cargo.toml
Tutorials PC Rust Book/18-def-modules/: Cargo.toml
Tutorials PC Rust Book/19-use-modules/: Cargo.toml
Tutorials PC Rust Book/23-collection-exercises/: Cargo.toml
Tutorials PC Rust Book/27-lifetimes/: Cargo.toml
Tutorials PC Rust Book/32-workspaces/: Cargo.toml
Tutorials Yew/01 - html/: Cargo.toml
Tutorials Yew/02 - js/: Cargo.toml
Tutorials Yew/Default/: Cargo.toml
crates/: Introduction - Rust Fuzz Book - random input testing framework.url  chronotope_chrono_ Date and time library for Rust.url  clap-rs_clap_ Command Line Argument Parser for Rust.url  dtolnay_anyhow_ Flexible concrete Error type built on std__error__Error.url  dtolnay_thiserror_ derive(Error) for struct and enum error types.url  embassy-stm32 - embedded systems framework.url  emilk_egui_ egui_ GUI that runs on both web and native.url  eyre-rs_color-eyre_ colorful error reports.url  launchbadge_sqlx_ An async, pure Rust SQL crate. Supports PostgreSQL, MySQL, and SQLite..url  no_proto -  Flexible, Fast & Compact Serialization with RPC.url  postcard-rpc - crates.io Rust Package Registry.url  proptest-rs_proptest_ Hypothesis-like property testing for Rust.url  rayon-rs_rayon_ Rayon_ A data parallelism library for iterators.url  seanmonstar_reqwest_ An easy and powerful Rust HTTP Client.url  tokio - crates.io Rust Package Registry.url  tokio-rs_tracing_ Application level tracing for Rust. Info.url  yewstack_yew_ Rust _ Wasm framework for creating reliable and efficient web applications.url
(+284 files in other folders)
