[package]
name = "helloworld"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
embedded-hal = "1.0.0"
nb = "1.1.0"
panic-halt = "0.2.0"
rtt-target = "0.5.0"

[dependencies.stm32f4xx-hal]
version = "0.20.0"
features = ["stm32f413"] # replace the model of your microcontroller here
                         # and add other required features