[package]
name = "embedded-hal-driver-ultrasonic"
version = "0.1.0"
edition = "2021"
# default-run = "bin"
categories = ["embedded", "no-std"]

[lib]
name = "ultrasonic_sensor"
path = "src/lib/lib.rs"

# [[bin]]
# name = "bin"
# path = "src/main.rs"
# doc = false

[dependencies]
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"

