[package]
name = "example"
version = "0.1.0"
authors = ["Pedro Martins <pedromcamartins@tecnico.ulisboa.pt>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
log = { version = "0.4.22" }

esp-alloc           = { version = "0.4.0" }
esp-backtrace       = { version = "0.13.0", features = [ "esp32s3", "exception-handler", "panic-handler", "println"] }
esp-hal             = { version = "0.19.0", features = [ "esp32s3", "log", "async", "embedded-hal"] }
esp-hal-embassy     = { version = "0.2.0",  features = [ "esp32s3", "log", "integrated-timers" ] }
esp-hal-procmacros  = { version = "0.12.0", features = [ "embassy" ] }
esp-println         = { version = "0.10.0", features = [ "esp32s3", "log"] }
esp-storage         = { version = "0.3.0",  features = [ "esp32s3" ], optional = true }
esp-wifi            = { version = "0.7.1",  features = [ "esp32s3" ], optional = true }
heapless            = "0.8.0"

embassy-executor    = { version = "0.6.0", features = [ "task-arena-size-40960" ] }
embassy-futures     = "0.1.1"
embassy-net = { version = "0.4.0", features = [ "tcp", "udp", "dhcpv4", "medium-ethernet" ] }
embassy-sync        = "0.6.0"
embassy-time        = { version = "0.3.2", features = [ "generic-queue-8" ] }
embassy-time-driver = { version = "0.1.0", optional = true }
embassy-usb         = { version = "0.3.0", default-features = false, optional = true }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
